# uav-swarm-through-webserver

./: droneBrain.py  droneData.py  master.py  pyproject.toml  server.py  slave1.py  slave2.py  tree_generator.py
